CHANGELOG FOR LEMONPOS VERSION 0.9.3
-----------------------------------------------------
- BUGFIX       : Taxes for SpecialOrders/CustomProducts are now calculated and printed on tickets.
- BUGFIX       : SpecialOrders (extra ticket) notes printing fixed.
- BUGFIX       : When selling Custom Products (SO) and adding more than one, the client is the same
                 for all custom products, its not allowed to change the client when adding another custom product.
- BUGFIX       : Adding fix_roles.sql script to fix the roles on database. Run this on 0.9.2 or older databases.
- IMPROVEMENT  : SpecialOrders delivery date now is printed in the format: 'Mon 21 May, 4:30 PM'.
- IMPROVEMENT  : SpecalOrders are now allowed to be marked as delivered on the same day.
- IMPROVEMENT  : Now specialOrders notes are up to 800 characters long.



CHANGELOG FOR LEMONPOS VERSION 0.9.2
-----------------------------------------------------
- BUGFIX       : Hidden first and last values for profit and sales plots on squeeze.
- BUGFIX       : When using date change feature, it seems that the transaction was not completed sucessfully.
- BUGFIX       : On the search panel, the RAW products where excluded but still counted on the result.
- BUGFIX       : Groups dont get all its taxes from the elements, if the group tax is not set correctly on creation, it will not have a correct one.
- BUGFIX       : When changing configuration, now lemon requests a new transaction and balance.
- BUGFIX       : Missing settings-check for drawer openning.
- IMPROVEMENT  : Fixing and improved CSS style sheet. Updated CSS, improving method on lemon to load the correct file for login window.
- UPDATE       : Updating PDF documentation.

NOTE: 0.9.2 version does not requiere a database upgrade.



CHANGELOG FOR LEMONPOS VERSION 0.9.1
-----------------------------------------------------
  - BUGFIX       : Allow to sell more items than in the stock.